corkboard_theme.css
/*@font-face {
	font-family: "Gabriola";
	src: url('assets/Gabriola.ttf');
}
*/

body {
	padding: 0;
	background-color: #ADB8A6;
}

div#outer {
	font-family: 'Quicksand', sans-serif;
	margin: 0 auto;
	margin-top: 10px;
	height: 100%;
	width: 750px;
	background-color: brown;
	background-image: url('assets/fzm-seamless.corkboard.texture-01-[800x800].jpg');
	font-size: 150%;

	box-shadow: inset 0px 0px 10px black, 0px 0px 10px;
	border-style: solid;
	border-width: 10px;
	border-radius: 50px;
	border-color: #999;
}



form { margin: 0; }

h1 {
	background: #FFFFC9;
	text-align: center;
	display: inline-block;
	font-size: 1.5em;
	margin: 0;
	padding: 3px;
	padding-left: 10px;
	padding-right: 10px;
	box-shadow: 2px 2px 2px black;
}

div#content {
	margin: 0 auto;
	width: 600px;
}

div#navigation {
	overflow: visible;
	position: relative;
	height: 100px;
}

#navigation ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	display: inline-block;
	vertical-align: top;
}

ul#family {
	font-size: 0;
}

ul#family li {
	font-size: 15px;
	vertical-align: top;
	margin-left: 5px;
}

#navigation ul li {
	display: inline-block;
	
}

.profile {
	background: #FFFFC9;
	cursor: pointer;
	text-align: center;
}
.profile h3 {
	font-size: 1em;
	margin: 0;
	padding: 0;
	font-weight: normal;
	text-align: center;
	padding-left: 3px;
	padding-right: 3px;

}
.profile img {
	width: 50px;
	margin: 4px;
	border: 1px solid black;
	vertical-align: bottom;
}

#tabs li {
	padding: 4px;
	background: #C9E9FF;
	cursor: pointer;
}

#navigation div {
	
}
div.tabs_container {
	vertical-align: bottom;
	position: absolute;
	bottom: 0;
	left: 0;
}

div.family_container {
	/*width: 69%;*/
	text-align: right;
	position: absolute;
	bottom: 0;
	right: 0;
}

/* Task list */
div#tasklist {
	clear: both;
	background-color: white;
	position: relative;
	/*top: -17px; /* Something wrong with the nav div */
	padding-top: 12px;
	padding-left: 15px;
	padding-right: 15px;
	padding-bottom:15px;
	box-shadow: 4px 4px 9px black;
}

img.pin_left {
	width: 31px;
	position:absolute;
	top: -1;
	left: 1;
}


#tasklist h2 {
	display: inline;
	font-size: 1.5em;
}

button#new_task_btn {
	display: inline;
	margin: 0;
	font-style: bold;
	font-size: 1.5em;
	margin-left: .5em;
}

/* Add a new task */
div#item_entry {
	background: gray;
	border: 1px black solid;
	padding-left: 10px;
	padding-right: 10px;
	text-align: center;
}

#item_entry input[type="text"] {
	width: 33em;
}

#containsImage {
	margin-bottom: 20px;
	margin-top: 15px;
}

#bottom {
	text-align: center;
}

#titleButton {
	top: 10px;
	cursor: pointer;
}

#family li h3 {
	pointer-events: none;
}

.selectionPic {
	cursor: pointer;
}

